--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - iPortfolio Bootstrap Template</title>
+  <title>Portfolio Details - Personal Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -28,9 +28,9 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: iPortfolio
+  * Template Name: MyResume
   * Updated: Nov 17 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+  * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
@@ -38,27 +38,7 @@
 
 <body>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-
-
   <main id="main">
-
-    <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
-      <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfolio Details</h2>
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li>Portfolio Details</li>
-          </ol>
-        </div>
-
-      </div>
-    </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
@@ -71,20 +51,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Bookdetail1.png" alt="">
-                  <h2>프로젝트 설명</h2>
-                  <p>
-                    회원가입시 정규표현식을 통하여 문자열 포함여부 및 조건을 달아주었고 ajax 비동기 통신을 사용하여 아이디 중복확인을 구현하였습니다.
-                    또한 카카오주소API를 사용하여 사용자에 편리성을 높였습니다.
-                  </p>
+                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Bookdetail2.png" alt="">
-                  <h2>프로젝트 설명</h2>
-                  <p>
-                    관리자용 홈페이지이며 로그인시 권한이 관리자인 아이디일 경우 해당 페이지로 이동하게 만들었으며 각종 카테고리를 관리할수있게 구현하였습니다.
-                  </p>
+                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
                 </div>
 
               </div>
@@ -94,17 +69,18 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>도서대여 프로젝트</h3>
+              <h3>Project information</h3>
               <ul>
-                <li><strong>Project introduction</strong>: 신입 개발자로서에 첫 프로젝트였으며 3명이서 진행하였고 관리자 관련 기능 및 게시판,회원가입,로그인 부분을 맡았습니다. </li>
-                <li><strong>Project date</strong>: 06 June, 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://github.com/KimJure/bookproject.git">https://github.com/KimJure/bookproject.git</a></li>
+                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Client</strong>: ASU Company</li>
+                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>프로젝트 소감</h2>
+              <h2>This is an example of portfolio detail</h2>
               <p>
-                처음해본 프로젝트라 완성도도 떨어지고 미흡한점이 많았지만 다음엔 어떤식으로 해야할지 감을 잡을수있었고 특히 데이터베이스 설계부분에서 신경을 많이 써야한다는것을 깨닳은 프로젝트였습니다.
+                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
               </p>
             </div>
           </div>
@@ -116,8 +92,7 @@
 
   </main><!-- End #main -->
 
-
-
+  <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
